--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -25,20 +25,15 @@ jobs:
                   submodules: true
 
             - name: Download Raspberry Pi OS Source Image
-              run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf/images/raspios_oldstable_lite_armhf-2021-12-02/2021-12-02-raspios-buster-armhf-lite.zip.torrent
+              run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.torrent
 
-      - name: Comparing Checksums
-        run: |
-          cd repository/src/image
-          curl -JL https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.sha256 | awk '{print $1"  "$2}' | sha256sum -c
+            - name: Comparing Checksums
+              run: |
+                cd repository/src/image
+                curl -JL https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.sha256 | awk '{print $1"  "$2}' | sha256sum -c
 
-      - name: Comparing Checksums
-        run: |
-          cd repository/src/image
-          curl -JL https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.sha256 | awk '{print $1"  "$2}' | sha256sum -c
-
-      - name: Update CustomPiOS Paths
-        run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
+            - name: Update CustomPiOS Paths
+              run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
 
             - name: Build Image
               run: sudo modprobe loop && cd repository/src && sudo bash -x ./build_dist
